@@ -58,6 +58,9 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
   * Panel: ensure the menu-manager tracker is updated to match monitor
     (LP: #1671432)
 
+  [ Nick Dedekind ]
+  * Fixed tooltip scaling issues. (LP: #1673950)
+
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200
 
 unity (7.4.0+16.04.20160906-0ubuntu1) xenial; urgency=medium
